--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/favicon" href="logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Rodolfo Francisco</title>
@@ -35,5 +36,10 @@
     </div>
     </div>
     
+    <h3>
+        Me chamo Rodolfo,tenho conhecimento em <a href="https://github.com/rflddev/Netflix-project">Html e Css</a>,<a href="https://github.com/rflddev/Pagina-de-Registro">JavaScript</a>
+        <br>
+        e conhecimento basico em python,TypeScript e C# 
+    </h3>
 </body>
 </html>
